# othello-c

./: CMakeLists.txt  Disk.cpp  Disk.h  README.md  board.cpp  board.h  coord.cpp  coord.h  draw.cpp  draw.h  main.cpp  moves.cpp  moves.h  player.cpp  player.h  utility.cpp  utility.h
